src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_contact.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(content.clone().with_last_name(\"P\").with_vcard(\"vcard\"))"
---
{
  "first_name": "V",
  "phone_number": "+79001231212",
  "last_name": "P",
  "vcard": "vcard"
}
