src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_invoice-2.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(InputMessageContentInvoice::new(\"RUB\",\n\"description\", \"payload\", [LabeledPrice::new(100, \"item\")], \"title\",))"
---
{
  "currency": "RUB",
  "description": "description",
  "payload": "payload",
  "prices": [
    {
      "amount": 100,
      "label": "item"
    }
  ],
  "title": "title"
}
