src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_location-2.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(InputMessageContentLocation::new(1.0, 2.0))"
---
{
  "latitude": 1.0,
  "longitude": 2.0
}
