src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_location.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(InputMessageContentLocation::new(1.0,\n2.0).with_heading(90).with_horizontal_accuracy(1.5).with_live_period(100).with_proximity_alert_radius(100),)"
---
{
  "latitude": 1.0,
  "longitude": 2.0,
  "heading": 90,
  "horizontal_accuracy": 1.5,
  "live_period": 100,
  "proximity_alert_radius": 100
}
