src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_rich.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(InputRichMessage::html(\"test\"))"
---
{
  "rich_message": {
    "html": "test"
  }
}
