src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_venue-2.snap
---
source: src/types/tests/input.rs
expression: "InputMessageContent::from(content)"
---
{
  "address": "addr",
  "latitude": 1.0,
  "longitude": 2.0,
  "title": "title"
}
