src/types/tests/snapshots/tgbot__types__tests__input__input_paid_media_group.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_2",
      "mime_type": null,
      "name": null
    }
  ]
}
